--- a/style.css
+++ b/style.css
@@ -6,13 +6,32 @@
 
 
 .container-section-promo{
-    display: flex;
-    width: 70%;
-    margin: 100px auto;
+    display:flex ;
+    width: 50%;
+    margin: 10px auto;
     align-items: center;
 }
 .item-article{
-    width: 30%;
-    height: 100px;
-    background-color: aqua;
+    width: 100%;
+    height: 250px;
+    background-color:yellow ;
 }
+.item-article h3 {
+    font-family: "Century Gothic";
+    color: #025157;
+  }
+
+  .item-article p {
+    font-family: "Calibri";
+    color: #343434;
+  }
+
+  .item-article form {
+    display: flex;
+  }
+  
+  .item-article form p {
+    color: #025157;
+    margin-right: 18px;
+  }
+ 
