--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 
 .container-section-promo{
     display:flex ;
-    width: 50%;
+    width: 100%;
     margin: 10px auto;
     align-items: center;
 }
@@ -34,4 +34,13 @@
     color: #025157;
     margin-right: 18px;
   }
- 
+  .item-video {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  
+  .item-video img {
+    width: 120px;
+    margin-top: 10px;
+  }
